# Site_Projeto_Extensao

./: Dockerfile  README.md  pyproject.toml
app/: app.py  views.py
app/static/cadastro/: estilo_cadastro.css
app/static/index/: estilo_index.css
app/static/login/: estilo_login.css  login.js
app/templates/cadastro/: cadastro.html
app/templates/index/: index.html
app/templates/login/: login.html  login2.html
docs/: como-executar.md  estrutura-pastas.md  requisitos-funcionais.md  requisitos-nao-funcionais.md  scrum-sprints.md  tecnologias.md
