[project]
name = "sxf-site"
version = "0.1.0"
description = "Site para IBK"
authors = [
    {name = "Eduardo Ellwanger"}
]
license = "none"
requires-python = ">=3.9"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-wtf",
    "Flask-SQLAlchemy",
    "flask_restful"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
